fix section gap and events items

--- a/css/catalog.css
+++ b/css/catalog.css
@@ -13,7 +13,7 @@
   max-width: 1080px;
   font-size: 16px;
   font-weight: 400;
-  margin-bottom: 39px;
+  margin-bottom: 38.5px;
   line-height: 32px;
 }
 
